--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   },
   "devDependencies": {
     "@vuepress/bundler-vite": "2.0.0-rc.8",
+    "jquery": "^3.7.1",
+    "jquery-form": "^4.3.0",
     "swiper": "^11.0.7",
     "vue": "^3.4.21",
     "vuepress": "2.0.0-rc.8",
     "vuepress-theme-hope": "2.0.0-rc.29",
     "vuetify": "^3.5.8"
-
   }
-
 }
