--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
     "docs:update-package": "pnpm dlx vp-update"
   },
   "devDependencies": {
-    "@vuepress/bundler-vite": "2.0.0-rc.8",
+    "@vuepress/bundler-vite": "2.0.0-rc.9",
     "jquery": "^3.7.1",
     "jquery-form": "^4.3.0",
-    "swiper": "^11.0.7",
-    "vue": "^3.4.21",
-    "vuepress": "2.0.0-rc.8",
-    "vuepress-theme-hope": "2.0.0-rc.29",
-    "vuetify": "^3.5.11"
+    "swiper": "^11.1.1",
+    "vue": "^3.4.27",
+    "vuepress": "2.0.0-rc.9",
+    "vuepress-theme-hope": "latest",
+    "vuetify": "^3.6.4"
   },
   "dependencies": {
     "mathjax-full": "^3.2.2"
