--- a/package.json
+++ b/package.json
@@ -12,10 +12,9 @@
   },
   "devDependencies": {
     "@vuepress/bundler-vite": "2.0.0-rc.9",
-    "swiper": "^11.1.1",
     "vue": "^3.4.27",
     "vuepress": "2.0.0-rc.9",
-    "vuepress-theme-hope": "latest",
+    "vuepress-theme-hope": "2.0.0-rc.38",
     "vuetify": "^3.6.4"
   },
   "dependencies": {
