--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "@vuepress/bundler-vite": "2.0.0-rc.9",
     "vue": "^3.4.27",
     "vuepress": "2.0.0-rc.9",
-    "vuepress-theme-hope": "2.0.0-rc.38",
-    "vuetify": "^3.6.4"
+    "vuepress-theme-hope": "2.0.0-rc.38"
   },
   "dependencies": {
     "mathjax-full": "^3.2.2"
