--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "docs:update-package": "pnpm dlx vp-update"
   },
   "devDependencies": {
-    "@vuepress/bundler-vite": "2.0.0-rc.9",
-    "@vuepress/plugin-notice": "2.0.0-rc.29",
+    "@vuepress/bundler-vite": "2.0.0-rc.13",
+    "@vuepress/plugin-notice": "2.0.0-rc.34",
     "vue": "^3.4.27",
-    "vuepress": "2.0.0-rc.9",
-    "vuepress-theme-hope": "2.0.0-rc.38"
+    "vuepress": "2.0.0-rc.13",
+    "vuepress-theme-hope": "2.0.0-rc.48"
   },
   "dependencies": {
-    "mathjax-full": "^3.2.2"
+    "mathjax-full": "^3.2.2",
+    "pnpm": "^9.2.0"
   }
 }
