--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
   "dependencies": {
     "bun": "^1.1.12",
     "ls": "^0.2.1",
-    "mathjax-full": "^3.2.2",
+    "mathjax-full": "^3.2.2"
   }
 }
