add node version
add node version

--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "bun": "^1.1.12",
     "ls": "^0.2.1",
     "mathjax-full": "^3.2.2"
+  },
+  "engines": {
+    "npm": "^10.2.4",
+    "node": "^20.11.1"
   }
 }
